attempt 2, fixed cropped hearts and incorrect footer.  attached video to readme

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,10 +10,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 12px 0 0 0;
 }
 
 .card__title {
-  margin: 12px 0 0 0;
+  margin: 0;
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
@@ -30,7 +31,9 @@
   opacity: 40%;
   width: 23px;
   height: 20px;
-  margin: 12px 0 0 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin: 0;
   border: none;
 }
 
@@ -44,10 +47,9 @@
   }
 
   .card__title {
-    font-weight: 500;
+    max-width: 80%;
     font-size: 16px;
     line-height: 1;
-    color: #212121;
   }
 
   .card__like-btn {
